--- a/bower.json
+++ b/bower.json
@@ -1,23 +1,20 @@
 {
-  "name": "faceFashion",
+  "name": "playquizzy",
   "version": "0.0.0",
   "dependencies": {
-    "angular-animate": "~1.4.2",
-    "angular-cookies": "~1.4.2",
-    "angular-touch": "~1.4.2",
-    "angular-sanitize": "~1.4.2",
-    "angular-messages": "~1.4.2",
-    "angular-aria": "~1.4.2",
-    "angular-route": "~1.4.2",
+    "angular-animate": "~1.5.3",
+    "jquery": "~2.1.4",
+    "angular-ui-router": "~0.2.15",
     "bootstrap-sass": "~3.3.5",
     "malarkey": "yuanqing/malarkey#~1.3.1",
     "angular-toastr": "~1.5.0",
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
-    "angular": "~1.4.2"
+    "angular": "~1.5.3",
+    "lodash": "^4.15.0"
   },
   "devDependencies": {
-    "angular-mocks": "~1.4.2"
+    "angular-mocks": "~1.5.3"
   },
   "overrides": {
     "bootstrap-sass": {
@@ -32,6 +29,7 @@
     }
   },
   "resolutions": {
-    "angular": "~1.4.2"
+    "jquery": "~2.1.4",
+    "angular": "~1.5.3"
   }
 }
