--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
     "angular": "~1.5.3",
-    "lodash": "^4.15.0"
+    "lodash": "^4.15.0",
+    "masonry": "^4.1.0",
+    "angular-masonry": "^0.16.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.3"
@@ -26,10 +28,23 @@
         "assets/fonts/bootstrap/glyphicons-halflings-regular.woff",
         "assets/fonts/bootstrap/glyphicons-halflings-regular.woff2"
       ]
+    },
+    "masonry": {
+      "main": [
+        "dist/masonry.pkgd.js"
+      ]
+    },
+    "outlayer": {
+      "main": [
+        "item.js",
+        "outlayer.js"
+      ]
     }
   },
   "resolutions": {
     "jquery": "~2.1.4",
-    "angular": "~1.5.3"
+    "angular": "~1.5.3",
+    "masonry": "^4.1.0",
+    "outlayer": "^2.1.0"
   }
 }
